Temperature monitoring panel

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
         <a id="user_manage" href="/user/manage">Manage</a>
         <a id="user_factory" href="/user/envfactory">Environment Factory</a>
         <a id="user_power" href="/user/powermonitoring">Power Monitoring</a>
+        <a id="user_temp" href="/user/tempmonitoring">Temperature Monitoring</a>
         {% if admin %}
             <a id="admin_environment" href="/admin/get/environment"><span>(admin)</span> Environment</a>
             <a id="admin_node" href="/admin/get/node"><span>(admin)</span> Node</a>
