--- a/templates/base.html
+++ b/templates/base.html
@@ -31,12 +31,13 @@
         <a id="user_power" href="/user/powermonitoring">Power Monitoring</a>
         <a id="user_temp" href="/user/tempmonitoring">Temperature Monitoring</a>
         {% if admin %}
-            <a id="admin_environment" href="/admin/get/environment"><span>(admin)</span> Environment</a>
-            <a id="admin_node" href="/admin/get/node"><span>(admin)</span> Node</a>
-            <a id="admin_switch" href="/admin/get/switch"><span>(admin)</span> Switch</a>
-            <a id="admin_user" href="/admin/user"><span>(admin)</span> User</a>
             <a id="admin_agent" href="/admin/agent"><span>(admin)</span> Agent</a>
             <a id="admin_client" href="/admin/get/client"><span>(admin)</span> DHCP Clients</a>
+            <a id="admin_environment" href="/admin/get/environment"><span>(admin)</span> Environment</a>
+            <a id="admin_node" href="/admin/get/node"><span>(admin)</span> Node</a>
+            <a id="admin_smtp" href="/admin/smtp"><span>(admin)</span> SMTP Server</a>
+            <a id="admin_switch" href="/admin/get/switch"><span>(admin)</span> Switch</a>
+            <a id="admin_user" href="/admin/user"><span>(admin)</span> User</a>
             <a id="admin_vpn" href="/admin/vpn"><span>(admin)</span> VPN Clients</a>
         {% endif %}
         <a id="user_settings" href="/user/settings">Settings</a>
